{
  "sourceLanguage" : "en",
  "strings" : {
    "Agency" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agentura"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agency"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Agence"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Agenzia"
          }
        }
      }
    },
    "Company" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Společnost"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Company"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Entreprise"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Azienda"
          }
        }
      }
    },
    "Country" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Země"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Country"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Pays"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Paese"
          }
        }
      }
    },
    "Crew" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Posádka"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Crew"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Équipage"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Equipaggio"
          }
        }
      }
    },
    "Date" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Datum"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Date"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Date"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Data"
          }
        }
      }
    },
    "Date %@" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Datum %@"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Date %@"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Date %@"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Data %@"
          }
        }
      }
    },
    "Date Asc" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Datum Vzestupně"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Date Asc"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Date croissante"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Data crescente"
          }
        }
      }
    },
    "Date Desc" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Datum Sestupně"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Date Desc"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Date décroissante"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Data decrescente"
          }
        }
      }
    },
    "Failure" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "chybná"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Failure"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "échouée"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "fallita"
          }
        }
      }
    },
    "Mission state" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stav mise"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mission state"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "État de la mission"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Stato missione"
          }
        }
      }
    },
    "Mission state %@" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stav mise %@"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mission state %@"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "État de la mission %@"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Stato missione %@"
          }
        }
      }
    },
    "Missions" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mise"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Missions"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Missions"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Missioni"
          }
        }
      }
    },
    "Name" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Jméno"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Nom"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Nome"
          }
        }
      }
    },
    "Name Asc" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Jméno Vzestupně"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name Asc"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Nom croissant"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Nome crescente"
          }
        }
      }
    },
    "Name Desc" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Jméno Sestupně"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name Desc"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Nom décroissant"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Nome decrescente"
          }
        }
      }
    },
    "Not known" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "není znám"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Not known"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "non disponible"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "non disponibile"
          }
        }
      }
    },
    "Refresh" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Obnovit"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Refresh"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Actualiser"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Aggiorna"
          }
        }
      }
    },
    "Rocket" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Raketa"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rocket"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Fusée"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Razzo"
          }
        }
      }
    },
    "Success" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "úspěšná"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Success"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "réussie"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "riuscita"
          }
        }
      }
    }
  },
  "version" : "1.3"
}