...
                    image: nil
                ),
                spacecraftStage: [
                    SpacecraftStage(launchCrew: [
                        CrewMember(
                            id: 1,
                            role: CrewRole(role: "Commander"),
                            astronaut: Astronaut(name: "Jessica Meir", agency: Agency(name: "NASA", country: nil), image: nil)
                        ),
                        CrewMember(
                            id: 2,
                            role: CrewRole(role: "Pilot"),
                            astronaut: Astronaut(name: "Jack Hathaway", agency: Agency(name: "NASA", country: nil), image: nil)
...
